--- a/Css/main.css
+++ b/Css/main.css
@@ -160,10 +160,23 @@ h2{
     font-family: 'Amatic SC', sans-ser
 }
 .menu{
-    font-size: 16px;
+    font-size: 22px;
     display: none;
     margin-left: 30px;
+    color: #000;
 }
+.closeicon{
+    display: none;
+    text-align: right;
+    font-size: 20px;
+}
+.closeicon a::after{
+    content:'';
+    width: 0px;
+    height: 0px;
+    position: static;
+}
+
 /* start home */
 #home{
     background-color: #EEEEEE;
@@ -295,6 +308,9 @@ body:has(.navLink:target) .nav-bar{
     height: 100%;
     background-color: #fff8;
 }
+body:has(.navLink:target) .nav-bar .navLink{
+    width: 250px;
+}
 body:has(.navLink:target) .nav-bar ul li{
     display: block;
     background-color: #fff;
@@ -305,19 +321,25 @@ body:has(.navLink:target) .nav-bar ul li{
     .menu{
         display: block;
         margin-left: 30px;
+        color: #000 !important;
+    }
+    .closeicon{
+        display: block;
+    }
+    #home .container{
+        margin-top: 0px !important;
     }
     .nav-bar .navLink{
         position: absolute;
         top:0;
         right: 0;
        background-color: #fff;
-        width: 350px;
         flex-direction: column;     
 height: 100%;
 padding-inline: 10px;
     }
     .nav-bar ul li {
-        /* display: none; */
+        display: none;
         margin-bottom: 20px;
         padding-block: 10px;
     }
